Fix little background on mobile bug

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,7 +14,7 @@ body {
     background-image: url("../public/media/images/metal_rolling_background.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     height: 100%;
     left: 0;
     position: fixed;
